[package]
name = "aruna_policy_evaluator"
version = "0.1.0"
edition = "2021"
description = "A permission and policy evaluator for AOS"
repository = "https://github.com/ArunaStorage/aruna_policy_evaluator"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
diesel-ulid = "0.1.3-alpha.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.100"