[package]
name = "aruna_policy"
version = "0.1.2"
edition = "2021"
description = "A permission and policy evaluator for AOS"
repository = "https://github.com/ArunaStorage/aruna_policy"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
diesel-ulid = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.103"
aruna-cache = "0.1.1"
tokio = {version = "1.29.1", features = ["full"]}
aruna-rust-api = "2.0.0-alpha.4"
